--- a/cv/classification/LeNet.ipynb
+++ b/cv/classification/LeNet.ipynb
@@ -22,18 +22,19 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets, transforms\n",
     "import torch.optim as optim\n",
     "import matplotlib.pyplot as plt\n",
+    "from collections import OrderedDict\n",
     "from torchsummary import summary\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
     "# check device\n",
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print(\"We use \" + DEVICE)"
+    "print(\"We use \" + DEVICE)\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -72,22 +73,20 @@
     }
    ],
    "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(\n",
+    "        (0.1307, ), (0.3081, )),\n",
+    "])\n",
     "train_db = datasets.MNIST('datasets/mnist_data',\n",
     "                          train=True,\n",
     "                          download=True,\n",
-    "                          transform=transforms.Compose([\n",
-    "                              transforms.ToTensor(),                       # 数据类型转化\n",
-    "                              transforms.Normalize(\n",
-    "                                  (0.1307, ), (0.3081, ))  # 数据归一化处理\n",
-    "                          ]))\n",
+    "                          transform=transform)\n",
     "\n",
     "test_db = datasets.MNIST('datasets/mnist_data',\n",
     "                         train=False,\n",
     "                         download=True,\n",
-    "                         transform=transforms.Compose([\n",
-    "                             transforms.ToTensor(),\n",
-    "                             transforms.Normalize((0.1307, ), (0.3081, ))\n",
-    "                         ]))\n",
+    "                         transform=transform)\n",
     "\n",
     "print('train:', len(train_db), 'test:', len(test_db))"
    ]
@@ -127,18 +126,19 @@
    },
    "outputs": [],
    "source": [
-    "train_loader = torch.utils.data.DataLoader(\n",
+    "train_loader = DataLoader(\n",
     "    train_db,\n",
-    "    batch_size=batch_size, shuffle=True)\n",
+    "    batch_size=batch_size, shuffle=True, num_workers=0,)\n",
     "\n",
-    "val_loader = torch.utils.data.DataLoader(\n",
+    "val_loader = DataLoader(\n",
     "    val_db,\n",
-    "    batch_size=batch_size, shuffle=False)\n",
+    "    batch_size=batch_size, shuffle=False, num_workers=0,)\n",
     "\n",
-    "test_loader = torch.utils.data.DataLoader(\n",
+    "test_loader = DataLoader(\n",
     "    test_db,\n",
     "    batch_size=batch_size,\n",
-    "    shuffle=False\n",
+    "    shuffle=False,\n",
+    "    num_workers=0,\n",
     ")"
    ]
   },
@@ -155,43 +155,39 @@
    "source": [
     "class Lenet5(nn.Module):\n",
     "\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, num_classes=10):\n",
     "        super(Lenet5, self).__init__()\n",
+    "        self.num_classes = num_classes\n",
     "        # input [batch,1,28,28] -> [batch,16,4,4]\n",
-    "        self.conv_unit = nn.Sequential(\n",
-    "            # input [batch,1,28,28] -> [batch,6,24,24]\n",
-    "            nn.Conv2d(in_channels=1, out_channels=6,\n",
-    "                      kernel_size=5, stride=1, padding=0),\n",
-    "            # input [batch,6,24,24] -> [batch,6,12,12]\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2, padding=0),\n",
-    "            # input [batch,6,12,12] -> [batch,16,8,8]\n",
-    "            nn.Conv2d(in_channels=6, out_channels=16,\n",
-    "                      kernel_size=5, stride=1, padding=0),\n",
-    "            # input [batch,16,8,8] -> [batch,16,4,4]\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
-    "        )\n",
-    "        self.fc_unit = nn.Sequential(\n",
-    "            nn.Linear(16*4*4, 120),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(120, 84),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(84, 10)\n",
-    "        )\n",
+    "        # input [batch,1,28,28] -> [batch,6,24,24]\n",
+    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=6\n",
+    "                               kernel_size=5, stride=1, padding=0)\n",
+    "        # input [batch,6,24,24] -> [batch,6,12,12]\n",
+    "        self.pool1 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        # input [batch,6,12,12] -> [batch,16,8,8]\n",
+    "        self.conv2 = nn.Conv2d(in_channels=6, out_channels=16\n",
+    "                               kernel_size=5, stride=1, padding=0)\n",
+    "        # input [batch,16,8,8] -> [batch,16,4,4]\n",
+    "        self.pool2 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "\n",
+    "        self.fc1 = nn.Linear(16*4*4, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, self.num_classes)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # [batch,1,28,28]\n",
     "        batch_size = x.size(0)\n",
-    "\n",
-    "        # [batch,16,4,4]\n",
-    "        x = self.conv_unit(x)\n",
-    "\n",
-    "        # [batch,16*4*4]\n",
+    "        x = self.relu(self.conv1(x))\n",
+    "        x = self.pool1(x)\n",
+    "        x = self.relu(self.conv2(x))\n",
+    "        x = self.pool2(x)\n",
     "        x = x.view(batch_size, -1)\n",
-    "        \n",
-    "        # [batch,10]\n",
-    "        logits = self.fc_unit(x)\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
     "\n",
-    "        return logits"
+    "        return x"
    ]
   },
   {
@@ -285,14 +281,14 @@
     "    val_acc = 0\n",
     "    val_correct = 0\n",
     "    net.eval()\n",
-    "    \n",
+    "\n",
     "    for data, label in val_loader:\n",
     "        data, label = data.to(DEVICE), label.to(DEVICE)\n",
-    "        \n",
+    "\n",
     "        logits = net(data)\n",
     "        val_loss += criteon(logits, label).item()\n",
     "\n",
-    "        pred = torch.argmax(logits, dim = 1)\n",
+    "        pred = torch.argmax(logits, dim=1)\n",
     "        val_correct += torch.eq(pred, label).float().sum().item()\n",
     "\n",
     "    val_loss /= len(val_loader.dataset)\n",
@@ -300,8 +296,7 @@
     "\n",
     "    print('\\nVAL set: Average loss: {:.4f}, Accuracy: {}/{} ({:.1f}%)\\n'.format(\n",
     "        val_loss, val_correct, len(val_loader.dataset), 100. * val_acc))\n",
-    "    return val_loss * len(val_loader.dataset), val_acc\n",
-    "    "
+    "    return val_loss * len(val_loader.dataset), val_acc"
    ]
   },
   {
@@ -322,11 +317,11 @@
     "    net.eval()\n",
     "    for data, label in test_loader:\n",
     "        data, label = data.to(DEVICE), label.to(DEVICE)\n",
-    "        \n",
+    "\n",
     "        logits = net(data)\n",
     "        test_loss += criteon(logits, label).item()\n",
     "\n",
-    "        pred = torch.argmax(logits, dim = 1)\n",
+    "        pred = torch.argmax(logits, dim=1)\n",
     "        test_correct += torch.eq(pred, label).float().sum().item()\n",
     "\n",
     "    test_loss /= len(test_loader.dataset)\n",
@@ -350,18 +345,18 @@
     "def plot_loss(train_losses, valid_losses):\n",
     "    plt.style.use('seaborn')\n",
     "\n",
-    "    train_losses = np.array(train_losses) \n",
+    "    train_losses = np.array(train_losses)\n",
     "    valid_losses = np.array(valid_losses)\n",
     "\n",
-    "    fig, ax = plt.subplots(figsize = (8, 4.5))\n",
+    "    fig, ax = plt.subplots(figsize=(8, 4.5))\n",
     "\n",
-    "    ax.plot(train_losses, color='blue', label='Training loss') \n",
+    "    ax.plot(train_losses, color='blue', label='Training loss')\n",
     "    ax.plot(valid_losses, color='red', label='Validation loss')\n",
-    "    ax.set(title=\"Loss over epochs\", \n",
-    "            xlabel='Epoch',\n",
-    "            ylabel='Loss') \n",
+    "    ax.set(title=\"Loss over epochs\",\n",
+    "           xlabel='Epoch',\n",
+    "           ylabel='Loss')\n",
     "    ax.legend()\n",
-    "    \n",
+    "\n",
     "    # change the plot style to default\n",
     "    plt.style.use('default')"
    ]
@@ -417,10 +412,9 @@
     "        acc.append(validate_acc)\n",
     "        scheduler.step(validate_loss)\n",
     "\n",
-    "        \n",
     "    plot_loss(train_losses, validate_losses)\n",
     "    plot_acc(acc)\n",
-    "        \n",
+    "\n",
     "    test()"
    ]
   },
