--- a/cv/classification/ResNet.ipynb
+++ b/cv/classification/ResNet.ipynb
@@ -647,7 +647,7 @@
     "                epoch + 1, batch_idx * len(data), len(train_loader.dataset),\n",
     "                100. * batch_idx / len(train_loader), loss.item()))\n",
     "    \n",
-    "    train_loss /= len(val_loader.dataset)\n",
+    "    train_loss /= len(train_loader.dataset)\n",
     "    train_acc = 1. * train_correct / len(train_loader.dataset)\n",
     "\n",
     "    return train_loss, train_acc"
