--- a/cv/classification/ShuffleNet.ipynb
+++ b/cv/classification/ShuffleNet.ipynb
@@ -144,21 +144,21 @@
    },
    "outputs": [],
    "source": [
-    "train_loader = torch.utils.data.DataLoader(\n",
+    "train_loader = DataLoader(\n",
     "    train_db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
     "    shuffle=True\n",
     ")\n",
     "\n",
-    "val_loader = torch.utils.data.DataLoader(\n",
+    "val_loader = DataLoader(\n",
     "    val_db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
     "    shuffle=False\n",
     ")\n",
     "\n",
-    "test_loader = torch.utils.data.DataLoader(\n",
+    "test_loader = DataLoader(\n",
     "    test_db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
