num_workers = nw

--- a/cv/classification/Code_Block.ipynb
+++ b/cv/classification/Code_Block.ipynb
@@ -58,19 +58,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nw = min([os.cpu_count(), batch_size if batch_size > 1 else 0, 8])  # number of workers\n",
+    "print('Using {} dataloader workers every process'.format(nw))\n",
     "# train_loader\n",
     "torch.utils.data.DataLoader(\n",
     "    db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
-    "    shuffle=True\n",
+    "    shuffle=True,\n",
+    "    num_workers=nw,\n",
     ")\n",
     "# val_loader or test_loader\n",
     "torch.utils.data.DataLoader(\n",
     "    db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
-    "    shuffle=False\n",
+    "    shuffle=False,\n",
+    "    num_workers=nw,\n",
     ")"
    ]
   },
