--- a/cv/classification/SqueezeNet.ipynb
+++ b/cv/classification/SqueezeNet.ipynb
@@ -143,25 +143,30 @@
    },
    "outputs": [],
    "source": [
-    "train_loader = torch.utils.data.DataLoader(\n",
+    "nw = min([os.cpu_count(), batch_size if batch_size > 1 else 0, 8])  # number of workers\n",
+    "print('Using {} dataloader workers every process'.format(nw))\n",
+    "train_loader = DataLoader(\n",
     "    train_db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
-    "    shuffle=True\n",
+    "    shuffle=True,\n",
+    "    num_workers=nw,\n",
     ")\n",
     "\n",
-    "val_loader = torch.utils.data.DataLoader(\n",
+    "val_loader = DataLoader(\n",
     "    val_db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
-    "    shuffle=False\n",
+    "    shuffle=False,\n",
+    "    num_workers=nw,\n",
     ")\n",
     "\n",
-    "test_loader = torch.utils.data.DataLoader(\n",
+    "test_loader = DataLoader(\n",
     "    test_db,\n",
     "    batch_size=batch_size,\n",
     "    drop_last=True,\n",
-    "    shuffle=False\n",
+    "    shuffle=False,\n",
+    "    num_workers=nw,\n",
     ")"
    ]
   },
